--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Ubuntu Condensed', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
     display: flex;
     min-height: 100vh;
     margin: 0;
@@ -9,12 +9,9 @@ body {
 .right_side {
     display: flex;
     flex-direction: column;
-    flex: 1;
-    justify-content: center;
 }
 
 .left_side {
-    align-items: center;
     background-image: url('./images/ghibli_background.jpeg');
     background-size: cover;
     background-position-x: center;
@@ -24,12 +21,34 @@ body {
 
 .right_side {
     flex: 3;
+    justify-content: center;
 }
 
-.logo {
-    text-align: center;
+.logo_section {
+    display: flex;
+    justify-content: center;
+    margin: 20% 10%;
+    gap: 1.5rem;
 }
 
 img {
-    width: min(200px, 80%);
+    width: min(150px, 50%);
+}
+
+.text {
+    font-size: 3vw;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
+
+.blank_container {
+    display: flex;
+    flex: 1;
+}
+
+.footer {
+    padding: 1rem;
+    text-align: center;
 }
