--- a/style.css
+++ b/style.css
@@ -102,7 +102,15 @@ form > div {
 }
 
 input {
-    width: 35ch;
+    width: 40ch;
+    padding: 0.3rem;
+    border-radius: 5px;
+    border: 1px inset rgb(118,118,118);
+}
+
+input:focus {
+    box-shadow: 0 9px 12px 0 rgba(0,0,0,0.24), 0 15px 30px 0 rgba(0,0,0,0.19);
+    border: 1px solid rgba(1,126,189,255);
 }
 
 button {
@@ -128,4 +136,13 @@ button:hover {
 a {
     text-decoration: none;
     color: rgba(1,126,189,255);
+}
+
+/* Styling for password mismatch */
+.error {
+    border: 2px solid red;
+}
+
+.match {
+    border: 2px solid green;
 }
